--- a/WebNoarJob/Styles/MyCard.css
+++ b/WebNoarJob/Styles/MyCard.css
@@ -10,6 +10,10 @@
     background-color: #ECB390 !important;
 }
 
+.btn:hover {
+    color: #DF7861 !important;
+}
+
 .title {
     color: #ECB390;
     font-style: italic;
