--- a/WebNoarJob/MasterPage.Master
+++ b/WebNoarJob/MasterPage.Master
@@ -5,10 +5,10 @@
 <html>
 <head runat="server">
     <title>NoarJob</title>
-    <link href="Styles/MyCard.css" rel="stylesheet" />
-    <link href="Styles/MasterCss.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/e7acfa4d17.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+    <link href="Styles/MasterCss.css" rel="stylesheet" />
+    <link href="Styles/MyCard.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -16,8 +16,7 @@
     <form id="form1" runat="server">
         <div class="container">
             <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-                <h1 class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-decoration-none title">
-                    NoarJob
+                <h1 class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-decoration-none title">NoarJob
                 </h1>
 
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
