המשך פיתוח מסך החיפוש

--- a/WebNoarJob/Styles/MyCard.css
+++ b/WebNoarJob/Styles/MyCard.css
@@ -2,11 +2,11 @@
     background-color: #94B49F !important;
 }
 
-.btn {
+.myBtn {
     background-color: #ECB390 !important;
 }
 
-.btn:hover {
+.myBtn:hover {
     color: #94B49F !important;
 }
 
