--- a/WebNoarJob/MasterPage.Master
+++ b/WebNoarJob/MasterPage.Master
@@ -5,6 +5,7 @@
 <html>
 <head runat="server">
     <title>NoarJob</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <script src="https://kit.fontawesome.com/e7acfa4d17.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
     <link href="Styles/MasterCss.css" rel="stylesheet" />
@@ -20,7 +21,7 @@
                 </h1>
 
                 <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="#" class="nav-link px-2 link-secondary">Home</a></li>
+                    <li><a href="SearchPage.aspx" class="nav-link px-2 link-secondary">בית</a></li>
                     <li><a href="#" class="nav-link px-2 link-dark">Features</a></li>
                     <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
                     <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
@@ -28,8 +29,8 @@
                 </ul>
 
                 <div class="col-md-3 text-end">
-                    <asp:Button ID="loginBtn" CssClass="btn btn-outline-light me-2" runat="server" Text="כניסה" OnClick="LoginBtn_Click" />
-                    <asp:Button ID="signupBtn" CssClass="btn btn-outline-light" runat="server" Text="הרשם" OnClick="SignupBtn_Click" />
+                    <asp:Button ID="loginBtn" CssClass="btn btn-outline-light me-2 myBtn" runat="server" Text="כניסה" OnClick="LoginBtn_Click" />
+                    <asp:Button ID="signupBtn" CssClass="btn btn-outline-light myBtn" runat="server" Text="הרשם" OnClick="SignupBtn_Click" />
                 </div>
             </header>
         </div>
